--- a/Installiis.yml
+++ b/Installiis.yml
@@ -6,3 +6,7 @@
         ansible.windows.win_feature:
           name: Web-Server
           state: present
+          
+      - name: Reboot if installing Web-Server feature requires it
+        ansible.windows.win_reboot:
+        when: win_feature.reboot_required
