--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -13,7 +13,7 @@
 
   - name: Copy a single file
     win_copy:
-      src: "{{ playbook_dir }}/files/test.ps1"
+      src: "\\dc01.shliss.ru\files\test.ps1"
       dest: C:\Temp\test.ps1
 
   - name: Run a script
