--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -16,6 +16,10 @@
       src: \\dc01.shliss.ru\folder\files\test.ps1
       dest: C:\Temp\test.ps1
       remote_src: yes
+      force: yes
+      become: yes
+      become_method: runas
+      become_user: SHLISS\adminDC
 
   - name: Run a script
     win_shell: C:\temp\test.ps1
