--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -15,9 +15,9 @@
     win_copy:
       src: \\dc01.shliss.ru\folder\files\test.ps1
       dest: C:\Temp\test.ps1
-      remote_src: yes
-      force: yes
-      become: yes
+      remote_src: True
+      force: True
+      become: True
       become_method: runas
       become_user: SHLISS\adminDC
 
