--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -12,7 +12,7 @@
         Set-Content -Path C:\Temp\test2.txt -Value $text
 
   - name: Copy a single file
-    win_shell:
+    win_shell: |
       $Destination = "c:\temp"
       $Source = "\\dc01.shliss.ru\folder\files\test.ps1"
       Copy-Item -Path $Source -Destination $Destination -Force
