--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -12,7 +12,9 @@
         Set-Content -Path C:\Temp\test2.txt -Value $text
 
   - name: Copy a single file
-    win_shell: Copy-Item -Path \\dc01.shliss.ru\folder\files\ -Destination "c:\temp" -Force
+    win_shell: |
+        $files = Get-Content \\dc01.shliss.ru\folder\files\test.ps1
+        Set-Content -Path C:\Temp\test.ps1 -Value $files
         
   - name: Run a script
     win_shell: C:\temp\test.ps1
