--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -12,9 +12,7 @@
         Set-Content -Path C:\Temp\test2.txt -Value $text
 
   - name: Copy a single file
-    win_shell: |
-        $files = Get-Content \\dc01.shliss.ru\folder\files\test.ps1
-        Set-Content -Path C:\Temp\test.ps1 -Value $files
+    win_shell: Copy \\dc01.shliss.ru\folder\files\test.ps1 C:\Temp\test.ps1 /Y
         
   - name: Run a script
     win_shell: C:\temp\test.ps1
