--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -12,7 +12,9 @@
         Set-Content -Path C:\Temp\test2.txt -Value $text
 
   - name: Copy a single file
-    win_shell: Copy \\dc01.shliss.ru\folder\files\test.ps1 C:\Temp\test.ps1 /Y
+    win_shell: сopy \\dc01.shliss.ru\folder\files\test.ps1 C:\Temp\test.ps1 /Y
+      args:
+      executable: cmd:exe      
         
   - name: Run a script
     win_shell: C:\temp\test.ps1
