--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -13,8 +13,8 @@
 
   - name: Copy a single file
     win_shell: сopy \\dc01.shliss.ru\folder\files\test.ps1 C:\Temp\test.ps1 /Y
-      args:
-      executable: cmd:exe      
+    args:
+      executable: cmd     
         
   - name: Run a script
     win_shell: C:\temp\test.ps1
