--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -13,8 +13,7 @@
 
   - name: Copy a single file
     win_shell: |
-        pushd \\dc01.shliss.ru\folder
-        xcopy \\dc01.shliss.ru\folder\files\test.ps1 C:\Temp\test.ps1 /H /Y /C /R /S       
+        cd \\dc01.shliss.ru\folder\files\       
       
   - name: Run a script
     win_shell: C:\temp\test.ps1
