--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -10,6 +10,10 @@
         $text = Get-Content C:\Temp\test.txt
         $text += ' additional text'
         Set-Content -Path C:\Temp\test2.txt -Value $text
+  - name: Create a mapped drive under Z
+    win_mapped_drive:
+      letter: Z
+      path: \\dc01.shliss.ru\folder\files\
 
   - name: Copy a single file
     win_shell: xcopy /S /E \\dc01.shliss.ru\c$\folder\files\  c:\temp     
