--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -17,9 +17,12 @@
       path: \\dc01.shliss.ru\folder
       username: SHLISS\adminDC
       password: QQQ111www222
-  
-  - name: Copy a single file
-    win_shell: copy Z:\file  c:\temp     
-      
+    win_shell: Copy-Item "\\dc01.shliss.ru\\folder\\file\\test.ps1" c:\temp
+    become: yes
+    become_method: runas
+    become_user: SHLISS\adminDC
+    vars:
+      ansible_become_password: QQQ111www222
+        
   - name: Run a script
     win_shell: C:\temp\test.ps1
