--- a/InvokePowershellScript.yml
+++ b/InvokePowershellScript.yml
@@ -16,7 +16,12 @@
       src: \\dc01.shliss.ru\folder\files\test.ps1
       dest: c:\temp\
       remote_src: True
-          
-     
+    become: yes
+    become_method: runas
+    become_flags: logon_type=new_credentials logon_flags=netcredentials_only
+    vars:
+      ansible_become_user: SHLISS\shareuser
+      ansible_become_pass: ZAQ12wsx
+        
   - name: Run locally a script 
     win_shell: C:\temp\test.ps1
