--- a/jointodomain.yml
+++ b/jointodomain.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: "Join Domain"
       win_domain_membership:
-        dns_domain_name: corppn.ru
+        dns_domain_name: shliss.ru
         hostname: ms02
         domain_admin_user: ansible@corp.enterprise.local
         domain_admin_password: enterpass
