--- a/changehostname.yml
+++ b/changehostname.yml
@@ -1,12 +1,8 @@
-- name:  Install Terminal Server
+- name:  Change hostname
   hosts: all
   gather_facts: false
   tasks:
-    
-    - name: Set timezone to Russian Standard Time (GMT+03:00)
-      win_timezone:
-        timezone: Russian Standard Time
-      
+       
     - name: Change the hostname to sample-hostname
       win_hostname:
         name: termdev1c
