--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -2,14 +2,5 @@
   hosts: all
   gather_facts: false
   tasks:
-
-    - name: Windows | Check for xRemoteDesktopAdmin Powershell module
-      win_psmodule:
-        name: xRemoteDesktopAdmin
-        state: present
-
-    - name: Windows | Enable Remote Desktop
-      win_dsc:
-        resource_name: xRemoteDesktopAdmin
-        Ensure: present
-        UserAuthentication: Secure
+    - name: Run PowerShell command
+      win_shell: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -value 0
