--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -7,3 +7,4 @@
         path: HKLM:\System\CurrentControlSet\Control\Terminal Server
         name: fDenyTSConnections 
         data: 0
+        state: present
