--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -3,8 +3,4 @@
   gather_facts: false
   tasks:
     - name: Run PowerShell command
-      win_regedit:
-        path: HKLM:\System\CurrentControlSet\Control\Terminal Server
-        name: fDenyTSConnections 
-        data: 0
-        state: present
+      win_ping:
