--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -3,4 +3,8 @@
   gather_facts: false
   tasks:
     - name: Run PowerShell command
-      win_ping:
+      win_regedit:
+        path: HKLM:\System\CurrentControlSet\Control\Terminal Server
+        name: fDenyTSConnections 
+        data: 0
+        state: present
