--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -8,3 +8,9 @@
         name: fDenyTSConnections 
         data: 0
         state: present
+        
+    - name: Set service startup mode to auto and ensure it is started
+      win_service:
+        name: TermService
+        state: started
+
