--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -2,11 +2,15 @@
   hosts: all
   gather_facts: false
   tasks:
+    - name: Allow RDP
+      win_shell: netsh advfirewall firewall set rule group=”remote desktop” new enable=Yes
+    
     - name: Run PowerShell command
       win_regedit:
         path: HKLM:\System\CurrentControlSet\Control\Terminal Server
         name: fDenyTSConnections 
         data: 0
+        type: dword
         state: present
         
     - name: Set service startup mode to auto and ensure it is started
