--- a/enablerdp.yml
+++ b/enablerdp.yml
@@ -9,7 +9,7 @@
       win_regedit:
         path: HKLM:\System\CurrentControlSet\Control\Terminal Server
         name: fDenyTSConnections 
-        data: 0
+        data: 0x00000000
         type: dword
         state: present
         
